<resources>
    <string name="app_name">Capture the Flag</string>
    <string name="saved_high_score_key">14</string>
    <string name="ctflogo">CTFLOGO</string>
    <string name="create_lobby">Create Lobby</string>
    <string name="join_a_lobby">Join a lobby</string>
    <string name="game_code">Game code:</string>
    <string name="join">Join</string>
    <string name="insert_game_code">Insert game code</string>
    <string name="textview">TextView</string>
    <string name="start">Start</string>
    <string name="_1_10">1/10</string>
    <string name="action_profile">Profile</string>
    <string name="action_help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar">CTF</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile_fragment">YOUR PROFILE</string>
    <string name="settings_fragment">Powered by Junipero Team</string>
    <string name="large_text">
        <b>OVERVIEW</b>".\n\n"
        "The application is based on a reinterpretation of the game 'Steal Flag', adapting it to Android"
        "application. The game consists of two teams whose challenge is to try to steal the flag of the"
        "enemy team located inside the enemy base and, at the same time, to defend their flag, so that"
        "it is not taken. The winner is the team that first captures the enemy flag."
        "The application has been designed to adapted to these days an historical game of popular"
        "culture. Although we are talking about a game mainly for children, the application makes it"
        "accessible to people of all ages."
        "Just be equipped with your smartphone to be able to play. The idea was born from the need"
        "to want to incorporate both physical activity, with simplicity, and technology, without having"
        "to rely on the physical tools of the game (flags and forts). In fact, this way you can have"
        "very large playing fields, so that, in addition to having fun, you can also do physical"
        "activity."
        "The application is based on a technology called 'peer2peer' which, in addition to being"
        "present in most Andorid devices, also allows the exchange of data (both send and receive)"
        "between the devices themselves, in order to achieve goals that with a single smartphone"
        "would not be attainable."
        "\n\n"
        <b>Purpose of the game:</b>"\n"
        "The aim of the game is to capture the flag of the opposing team\n\n"
        <b>Division of the teams:</b>"\n"
        "The minimum number of participants to start a game is four up to a maximum of ten."
        "Players will be divided into two teams and, after that, it will be assigned roles:"
        "one keeper per team, which will have the task of keeping the flag safe."
        "The participants who will not be the keeper will be the stealers, that are those who try"
        "to steal the enemy flag.\n\n"
        <b>Preparation of the playing field:</b>"\n"
        "Once you start the game the teams will have a minute to move within the playing field trying"
        "to get as far away as possible. Once the minute is over, the actual game will begin.\n\n"
        <b>Roles of the players:</b>"\n"
        <b>Stealer:</b>" Players who play the role stealer will have the task of capturing the flag of the"
        "opposing team, the flag will be considered taken, when a stealer will enter a radius between"
        "three and eight meters from the enemy flag, ie the keeper. The stealers will also have the"
        "task of defending their flag by communicating the position of possible stealers of the"
        "opposing team. Stealers must not in any way know the identity of the opposing kepper and"
        "not even its exact location, the only way allowed to go hunting is to know the direction"
        "to take to approach the flag and how far away they are from it.\n"
        <b>Keeper:</b>" The Keepers will have to do nothing but escape from the stealers of the opposing"
        "team and avoid entering a radius between three and eight meters with one of them."
        "The keepers must not in any case reveal their position on the field or even their role,"
        "being the key role of the game, not even to the opposing keeper. It is not forbidden the"
        "meeting between the two keepers that, if it were to happen would not lead to a violation of"
        "the rules and not even at the end of the game, simply nothing would happen.\n\n"
        <b>End of the game:</b>"\n"
        "The game will be considered finished when one of the two teams captures the enemy team’s"
        "flag. At the end, one team will be considered the winner, while the other will be considered"
        "the loser."
        "In the event that the two flags are caught at the same time, the game will be considered"
        "a tie.\n\n"
        <b>Cancellation of the game:</b>"\n"
        "The game will be considered null and void, so you will have to replay if you run into one of"
        "the following scenarios:\n"
        "•  Too many players leave the game, that is, when there is no longer the minimum number to"
        "face a game (four players minimum).\n"
        "•  When one of the two flags leaves the game voluntarily or unintentionally. In this case,"
        "one of the two teams will be unable to win and for this the game will have to be cancelled.\n"
        "•  If the host leaves the game voluntarily or accidentally during the preparation fo the game,"
        "in this case, as there is no one to host the game, it will be cancelled.\n"
        "A player who leaves the game, means the case in which the player leaves the game voluntarily"
        "or unintentionally or the case in which turns off the device on which he is playing.\n\n"
        <b>Behaviours prohibited:</b>"\n"
        "•  It is not possible to follow the opposing team during the preparation phase.\n"
        "•  It is not possible to turn off the geolocation of your device.\n"
        "•  It is not possible to turn off the GPS connection and/or the internet connection.\n"
        "•  It is forbidden to damage players' devices to take advantage of them.\n"
        "•  It is forbidden to throw any object in order to harm other players.\n"
        "•  It is forbidden to take any kind of motor or pedal to be able to move faster.\n\n"
        <b>Behaviours not recommended:</b>"\n"
        "•  It is not recommended to start a game where the phone signal is not optimal.\n"
        "•  It is not recommended to start a game in closed places or too small to be able to play a"
        "game in optimal conditions.\n"
        "•  It is not recommended to start a game with a high transit rate means.\n"
        "•  It is not recommended to start a game in public places where a certain type of behavior"
        "and silence is required.\nS"

        "\n\n"
    </string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="tab_text_1">Game</string>
    <string name="tab_text_2">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="game_fragment_title">HELLO GAME FRAGGGGMNET</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_chat">Hello CHAT fragment\n\nQui ci sarà la chat della squadra.</string>
    <string name="todo">TODO</string>
    <string name="your_score">Your score</string>
    <string name="name">Name</string>
    <string name="ok">Ok</string>
    <string name="start_new_game">
        Start a new game!\n\nChoose if you want create a new lobby or join the lobby of your friend.
    </string>
    <string name="goaway">seconds\n\n\nRun away from the other team.</string>
    <string name="blue_arrow">blue arrow</string>
    <string name="red_arrow">red arrow</string>
    <string name="losts">Losts:</string>
    <string name="id">ID:</string>
    <string name="wins">Wins:</string>
    <string name="nickname">Nickname:</string>
    <string name="send">Send</string>
    <string name="send_a_message">Send a message</string>
    <string name="sound_on_off">Sound OFF/ON</string>
    <string name="insert_new_nickname">Insert new nickname</string>
    <string name="change_name">Change name</string>
</resources>